--- a/followtheleader.html
+++ b/followtheleader.html
@@ -62,15 +62,32 @@
         </header>
         <div class="fatboy">
             <div class="cover">
-                <a
-                    href="https://youtube.com/playlist?list=OLAK5uy_lN3gSClGJU--GAHceqHudhjb4id44kPY4&si=0UuRw5BmwT2SDgAW"
-                    ><img
-                        class="cover"
-                        width="316px"
-                        height="316px"
-                        src="images/Korn_follow_the_leader.jpg"
-                        alt="FollowTheLeader"
-                /></a>
+                <div id="followwiki">
+                    <a
+                        href="https://youtube.com/playlist?list=OLAK5uy_lN3gSClGJU--GAHceqHudhjb4id44kPY4&si=0UuRw5BmwT2SDgAW"
+                        ><img
+                            class="albumcover"
+                            src="images/Korn_follow_the_leader.jpg"
+                            alt="followtheleader"
+                    /></a>
+                    <p class="followabout" id="albumwiki">
+                        Follow the Leader (stylized as FOLLOW the LEADEЯ) is the
+                        third studio album by American nu metal band Korn. It
+                        was released on August 18, 1998, through both Immortal
+                        and Epic Records. This was their first album not
+                        produced by Ross Robinson. Instead, it was produced by
+                        Steve Thompson and Toby Wright. The album peaked at
+                        number one on four national charts, including the US
+                        Billboard 200 with 268,000 units sold in its first week
+                        of release. Follow the Leader is the band's most
+                        commercially–successful album, being certified
+                        five-times Platinum by the RIAA. Its singles, "Got the
+                        Life" and "Freak on a Leash", both charted on more than
+                        three charts, and their music videos are considered to
+                        be the first music videos retired from MTV, most notably
+                        the MTV show Total Request Live.
+                    </p>
+                </div>
             </div>
             <div class="tracklist">
                 <a
