--- a/issues.html
+++ b/issues.html
@@ -62,13 +62,32 @@
         </header>
         <div class="fatboy">
             <div class="cover">
-                <a
-                    href="https://youtube.com/playlist?list=OLAK5uy_knRMkW5KNfpGu2F2o6qtT3pribkxdsDgM&si=_xx0VN6U63GsNfkr"
-                    ><img
-                        class="cover"
-                        src="images/KoRnIssues.jpg"
-                        alt="Issues"
-                /></a>
+                <div id="issueswiki">
+                    <a
+                        href="https://www.youtube.com/playlist?list=OLAK5uy_knRMkW5KNfpGu2F2o6qtT3pribkxdsDgM"
+                        ><img
+                            class="albumcover"
+                            src="images/KoRnIssues.jpg"
+                            alt="issues"
+                    /></a>
+                    <p class="issuesabout" id="albumwiki4">
+                        Issues is the fourth studio album by American nu metal
+                        band Korn. It was released on November 16, 1999, through
+                        both Immortal and Epic Records. The album was promoted
+                        throughout 2000 by the band's highly successful Sick and
+                        Twisted Tour. In 2025, Rae Lemeshow-Barooshian of
+                        Loudwire included the album in her list of "the top 50
+                        nu-metal albums of all time", ranking it
+                        fifteenth.During one of the band's recording sessions,
+                        journalist Chris Connelly asked about how the recording
+                        was coming along, to which drummer David Silveria
+                        responded that it "Sounds like the music is a little
+                        more simplified and heavier. Kind of heavier grooves,
+                        more than the last couple. So kind of more similar to
+                        the beginning, except Jon is a much better singer now,
+                        so it's all coming together."
+                    </p>
+                </div>
             </div>
             <div class="tracklist">
                 <a
