--- a/seeyouontheotherside.html
+++ b/seeyouontheotherside.html
@@ -62,13 +62,31 @@
         </header>
         <div class="fatboy">
             <div class="cover">
-                <a
-                    href="https://youtube.com/playlist?list=OLAK5uy_lO5MgjTRtGvI44f1XQ3cHXDXnMB30XaKE&si=ks0tk38d-Za4AxkV"
-                    ><img
-                        class="cover"
-                        src="images/Korn_-_See_You_on_the_Other_Side.jpg"
-                        alt="See You On The Other Side"
-                /></a>
+                <div id="seeyouwiki">
+                    <a
+                        href="https://youtube.com/playlist?list=OLAK5uy_lO5MgjTRtGvI44f1XQ3cHXDXnMB30XaKE&si=ks0tk38d-Za4AxkV"
+                        ><img
+                            class="albumcover"
+                            src="images/Korn_-_See_You_on_the_Other_Side.jpg"
+                            alt="SeeYouOnTheOtherside"
+                    /></a>
+                    <p class="seeyouabout" id="albumwiki7">
+                        See You on the Other Side is the seventh studio album by
+                        American nu metal band Korn. It was released on December
+                        6, 2005, by Virgin Records. It is their first album as a
+                        quartet after the departure of founding guitarist Brian
+                        "Head" Welch and the last album with original drummer
+                        David Silveria before he departed from the band in
+                        December 2006. The album was first certified gold in the
+                        United States on January 12, 2006; a subsequent platinum
+                        record certification was awarded on March 16, 2006.[5]
+                        In the album, Korn experimented with different musical
+                        styles and even collaborated with pop music producers
+                        The Matrix. Critical reaction of the album was generally
+                        positive. However, criticisms of the album focused on
+                        the musical production by The Matrix and songwriting.
+                    </p>
+                </div>
             </div>
             <div class="tracklist">
                 <a
