--- a/selftitle.html
+++ b/selftitle.html
@@ -62,13 +62,33 @@
         </header>
         <div class="fatboy">
             <div class="cover">
-                <a
-                    href="https://youtube.com/playlist?list=OLAK5uy_lmmH5nhYjpyp1otjcC7OD-GAlG-n2C_bA&si=lRfdRKW8hkXizlij"
-                    ><img
-                        class="cover"
-                        src="images/Korn-Korn.jpg"
-                        alt="Self-Title"
-                /></a>
+                <div id="selftitlewiki">
+                    <a
+                        href="https://youtube.com/playlist?list=OLAK5uy_lmmH5nhYjpyp1otjcC7OD-GAlG-n2C_bA&si=lRfdRKW8hkXizlij"
+                        ><img
+                            class="albumcover"
+                            src="images/Korn-Korn.jpg"
+                            alt="Self-Title"
+                    /></a>
+                    <p class="selfabout" id="albumwiki">
+                        Korn (printed and stylized as KoЯn) is the debut studio
+                        album by the American nu metal band Korn. It was
+                        released on October 11, 1994, through Immortal and Epic
+                        Records. Before recording the album, the band was
+                        approached by Immortal/Epic Records after a performance
+                        in Huntington Beach, California. The band signed to
+                        their label because they did not want to "sign away all
+                        of their creative freedom" The band would record at
+                        Indigo Ranch Studios in Malibu, California, with
+                        producer Ross Robinson, who also produced their 1993
+                        demo Neidermayer's Mind. The recording took place from
+                        May to June 1994. After the recordings, Korn toured with
+                        Biohazard and House of Pain. The album's themes include
+                        child abuse, drug abuse, and bullying. Photography was
+                        done by Stephen Stickler, and the design was directed by
+                        Jay Papke and Dante Ariola.
+                    </p>
+                </div>
             </div>
             <div class="tracklist">
                 <a
@@ -133,5 +153,6 @@
                 >
             </div>
         </div>
+        <script src="script.js"></script>
     </body>
 </html>
