--- a/takealookinthemirror.html
+++ b/takealookinthemirror.html
@@ -62,13 +62,26 @@
         </header>
         <div class="fatboy">
             <div class="cover">
-                <a
-                    href="https://youtube.com/playlist?list=OLAK5uy_k3ri5gYXzXs3zZgFvb3anXVI-nwf2sTXg&si=UQfwV7pOlGjo-oeK"
-                    ><img
-                        class="cover"
-                        src="images/Korn_-_Take_a_Look_in_the_Mirror.jpg"
-                        alt="Take a look in the mirror"
-                /></a>
+                <div id="takewiki">
+                    <a
+                        href="https://youtube.com/playlist?list=OLAK5uy_k3ri5gYXzXs3zZgFvb3anXVI-nwf2sTXg&si=UQfwV7pOlGjo-oeK"
+                        ><img
+                            class="albumcover"
+                            src="images/Korn_-_Take_a_Look_in_the_Mirror.jpg"
+                            alt="TakeALookInTheMirror"
+                    /></a>
+                    <p class="takeabout" id="albumwiki6">
+                        Take a Look in the Mirror is the sixth studio album by
+                        American nu metal band Korn. Released on November 21,
+                        2003, through Epic Records and Immortal Records, it is
+                        the last Korn studio album to feature their full
+                        original lineup, as their original guitarist Brian
+                        "Head" Welch left the band in February 2005 until his
+                        return in 2013 (with the release of their 2013 album The
+                        Paradigm Shift). It was the last studio album by Korn
+                        under the Epic and Immortal labels.
+                    </p>
+                </div>
             </div>
             <div class="tracklist">
                 <a
