--- a/untochables.html
+++ b/untochables.html
@@ -62,13 +62,26 @@
         </header>
         <div class="fatboy">
             <div class="cover">
-                <a
-                    href="https://youtube.com/playlist?list=OLAK5uy_k3ri5gYXzXs3zZgFvb3anXVI-nwf2sTXg&si=UQfwV7pOlGjo-oeK"
-                    ><img
-                        class="cover"
-                        src="images/Unto_album_cover.jpg"
-                        alt="Untouchables"
-                /></a>
+                <div id="unwiki">
+                    <a
+                        href="https://www.youtube.com/playlist?list=OLAK5uy_k3ri5gYXzXs3zZgFvb3anXVI-nwf2sTXg"
+                        ><img
+                            class="albumcover"
+                            src="images/Unto_album_cover.jpg"
+                            alt="untouchables"
+                    /></a>
+                    <p class="unabout" id="albumwiki5">
+                        Untouchables is the fifth studio album by American nu
+                        metal band Korn. The album was officially released on
+                        June 11, 2002, and featured the Grammy-winning single
+                        "Here to Stay". Untouchables debuted at number two on
+                        the Billboard 200 with 495,991 copies sold during its
+                        first week, second only to Eminem's The Eminem Show. The
+                        album received positive reviews from music critics. It
+                        was certified platinum on July 11, 2002, and has sold at
+                        least 1.4 million copies in the United States.
+                    </p>
+                </div>
             </div>
             <div class="tracklist">
                 <a
