--- a/lifeispeachy.html
+++ b/lifeispeachy.html
@@ -61,13 +61,32 @@
         </header>
         <div class="fatboy">
             <div class="cover">
-                <a
-                    href="https://youtube.com/playlist?list=OLAK5uy_nm7k8lIaYMoJ6xrn7H6DAknnEe4K83nm8&si=0k6M7IXU3E0d9itx"
-                    ><img
-                        class="cover"
-                        src="images/Korn-LifeIsPeachy.jpg"
-                        alt="LifeIsPeachy"
-                /></a>
+                <div id="lifewiki">
+                    <a
+                        href="https://youtube.com/playlist?list=OLAK5uy_nm7k8lIaYMoJ6xrn7H6DAknnEe4K83nm8&si=0k6M7IXU3E0d9itx"
+                        ><img
+                            class="albumcover"
+                            src="images/Korn-LifeIsPeachy.jpg"
+                            alt="LifeIsPeachy"
+                    /></a>
+                    <p class="lifeabout" id="albumwiki2">
+                        Life Is Peachy is the second studio album by American nu
+                        metal band Korn. It was released on October 15, 1996,
+                        through both Immortal Records and Epic Records. After
+                        the release of Korn's 1994 self-titled debut album, the
+                        band reunited with Ross Robinson to produce and went
+                        back to Indigo Ranch Studios to record. Life Is Peachy
+                        features such themes as drugs, social encounters, sex,
+                        betrayal, and revenge. The album has fourteen tracks,
+                        excluding the hidden track after "Kill You". Martin
+                        Riedl photographed its cover art, and its title is
+                        credited to Korn's bassist Reginald "Fieldy" Arvizu.
+                        Life Is Peachy was Korn's first significant
+                        breakthrough, which came from constant touring after the
+                        debut album's release and building a fan base, thus
+                        fueling great expectations.
+                    </p>
+                </div>
             </div>
             <div class="tracklist">
                 <a
