removed:no more tour

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
@@ -452,254 +452,6 @@
                                 <li>Teerjerker</li>
                                 <li>Last Legal Drug</li>
                             </ol>
-                        </div>
-                    </div>
-                </div>
-                <div class="toursec">
-                    <h1 id="Tour">Tour</h1>
-                </div>
-                <div class="tourbox">
-                    <div class="tour">
-                        <div class="tourinf">
-                            <h2 class="touryear">1993</h2>
-                        </div>
-                        <div class="years">
-                            <div class="live">
-                                <h3 class="tourheader">
-                                    October 18, 1993 – Club 5902, Huntington
-                                    Beach, CA, USA
-                                </h3>
-                                <iframe
-                                    width="560"
-                                    height="315"
-                                    src="https://www.youtube.com/embed/DRgvqIV6xcs?si=KGC-zUNu2v4ZyhWi"
-                                    title="YouTube video player"
-                                    frameborder="0"
-                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                    referrerpolicy="strict-origin-when-cross-origin"
-                                    allowfullscreen
-                                ></iframe>
-                            </div>
-                            <div class="live">
-                                <h3 class="tourheader">
-                                    October 30, 1993 | Club 5902, Huntington
-                                    Beach, CA, USA
-                                </h3>
-                                <iframe
-                                    width="560"
-                                    height="315"
-                                    src="https://www.youtube.com/embed/qT1i4JYZY-s?si=4tfLhsmx6P_vi-oG"
-                                    title="YouTube video player"
-                                    frameborder="0"
-                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                    referrerpolicy="strict-origin-when-cross-origin"
-                                    allowfullscreen
-                                ></iframe>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="tour">
-                        <div class="tourinf">
-                            <h2 class="touryear">1994</h2>
-                        </div>
-                        <div class="years">
-                            <div class="live">
-                                <h3 class="tourheader">
-                                    June 5, 1994 | SOMA, San Diego, CA, USA
-                                </h3>
-                                <iframe
-                                    width="560"
-                                    height="315"
-                                    src="https://www.youtube.com/embed/jfnJIhOgKpc?si=khN4ZA3S2mInm2lX"
-                                    title="YouTube video player"
-                                    frameborder="0"
-                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                    referrerpolicy="strict-origin-when-cross-origin"
-                                    allowfullscreen
-                                ></iframe>
-                            </div>
-                            <div class="live">
-                                <h3 class="tourheader">
-                                    June 6, 1994 | The Roxy, Hollywood, CA, USA
-                                </h3>
-                                <iframe
-                                    width="560"
-                                    height="315"
-                                    src="https://www.youtube.com/embed/8YLoXH6noMM?si=LMgaknMrsloWb6kJ"
-                                    title="YouTube video player"
-                                    frameborder="0"
-                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                    referrerpolicy="strict-origin-when-cross-origin"
-                                    allowfullscreen
-                                ></iframe>
-                            </div>
-                            <div class="live">
-                                <h3 class="tourheader">
-                                    December 3, 1994 | Cactus Club, San Jose,
-                                    CA, USA
-                                </h3>
-                                <iframe
-                                    width="560"
-                                    height="315"
-                                    src="https://www.youtube.com/embed/M0CFBhAIRtY?si=4NVDTzUelOPmiaqH"
-                                    title="YouTube video player"
-                                    frameborder="0"
-                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                    referrerpolicy="strict-origin-when-cross-origin"
-                                    allowfullscreen
-                                ></iframe>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="tour">
-                        <div class="years">
-                            <div class="tourinf">
-                                <h2 class="touryear">1995</h2>
-                            </div>
-                            <div>
-                                <div class="live">
-                                    <h3 class="tourheader">
-                                        February 26, 1995 | Engine Room, Fort
-                                        Worth, TX, USA
-                                    </h3>
-                                    <iframe
-                                        width="560"
-                                        height="315"
-                                        src="https://www.youtube.com/embed/jVYnol68U6w?si=QYz5xeB-0Elw4EQ6"
-                                        title="YouTube video player"
-                                        frameborder="0"
-                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                        referrerpolicy="strict-origin-when-cross-origin"
-                                        allowfullscreen
-                                    ></iframe>
-                                </div>
-                            </div>
-                            <div class="live">
-                                <h3 class="tourheader">
-                                    March 4, 1995 | The Tunnel, Orange County,
-                                    CA, USA
-                                </h3>
-                                <iframe
-                                    width="560"
-                                    height="315"
-                                    src="https://www.youtube.com/embed/JtlIPaEz_z4?si=VcmdEip6u-vgAppQ"
-                                    title="YouTube video player"
-                                    frameborder="0"
-                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                    referrerpolicy="strict-origin-when-cross-origin"
-                                    allowfullscreen
-                                ></iframe>
-                            </div>
-                            <div class="live">
-                                <h3 class="tourheader">
-                                    March 28, 1995 | Huntridge Theater, Las
-                                    Vegas, NV, USA
-                                </h3>
-                                <iframe
-                                    width="560"
-                                    height="315"
-                                    src="https://www.youtube.com/embed/fDTC4gBCdns?si=rQivBcRiOsl67REr"
-                                    title="YouTube video player"
-                                    frameborder="0"
-                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                    referrerpolicy="strict-origin-when-cross-origin"
-                                    allowfullscreen
-                                ></iframe>
-                            </div>
-                            <div class="live">
-                                <h3 class="tourheader">
-                                    May 7, 1995 | Electric Ballroom, Knoxville,
-                                    TN, USA
-                                </h3>
-                                <iframe
-                                    width="560"
-                                    height="315"
-                                    src="https://www.youtube.com/embed/Zr4T-VLe68k?si=ucFvdrQ5sEGaoDIm"
-                                    title="YouTube video player"
-                                    frameborder="0"
-                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                    referrerpolicy="strict-origin-when-cross-origin"
-                                    allowfullscreen
-                                ></iframe>
-                            </div>
-                            <div class="live">
-                                <h3 class="tourheader">
-                                    May 8, 1995 | The Ranch, Augusta, GA, USA
-                                </h3>
-                                <iframe
-                                    width="560"
-                                    height="315"
-                                    src="https://www.youtube.com/embed/wWc4rLQ5-2w?si=dt6EmdvXI0GLVWvc"
-                                    title="YouTube video player"
-                                    frameborder="0"
-                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                    referrerpolicy="strict-origin-when-cross-origin"
-                                    allowfullscreen
-                                ></iframe>
-                            </div>
-                            <div class="live">
-                                <h3 class="tourheader">
-                                    June 6, 1995 | DV8, Salt Lake City, UT, USA
-                                </h3>
-                                <iframe
-                                    width="560"
-                                    height="315"
-                                    src="https://www.youtube.com/embed/KVIC9Ismz-w?si=d0ygK_E1lCQM2qhw"
-                                    title="YouTube video player"
-                                    frameborder="0"
-                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                    referrerpolicy="strict-origin-when-cross-origin"
-                                    allowfullscreen
-                                ></iframe>
-                            </div>
-                            <div class="live">
-                                <h3 class="tourheader">
-                                    July 28, 1995 | Eagles Ballroom, Milwaukee,
-                                    WI, USA
-                                </h3>
-                                <iframe
-                                    width="560"
-                                    height="315"
-                                    src="https://www.youtube.com/embed/8aP72SGa3z4?si=djc59yPratBZYeUq"
-                                    title="YouTube video player"
-                                    frameborder="0"
-                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                    referrerpolicy="strict-origin-when-cross-origin"
-                                    allowfullscreen
-                                ></iframe>
-                            </div>
-                            <div class="live">
-                                <h3 class="tourheader">
-                                    September 24, 1995 | Desert Sky Pavilion
-                                    (U-Fest), Phoenix, AZ, USA
-                                </h3>
-                                <iframe
-                                    width="560"
-                                    height="315"
-                                    src="https://www.youtube.com/embed/p2dBdAUV760?si=RdGA2mjqHaxN3cxX"
-                                    title="YouTube video player"
-                                    frameborder="0"
-                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                    referrerpolicy="strict-origin-when-cross-origin"
-                                    allowfullscreen
-                                ></iframe>
-                            </div>
-                            <div class="live">
-                                <h3 class="tourheader">
-                                    December 6, 1995 | Grant Street Dance Hall,
-                                    Lafayette, LA, USA
-                                </h3>
-                                <iframe
-                                    width="560"
-                                    height="315"
-                                    src="https://www.youtube.com/embed/8AHaFB9jRdo?si=qE2818Ywt1LtHvRz"
-                                    title="YouTube video player"
-                                    frameborder="0"
-                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                    referrerpolicy="strict-origin-when-cross-origin"
-                                    allowfullscreen
-                                ></iframe>
-                            </div>
                         </div>
                     </div>
                 </div>
